prevent wrapping of article length in article details

--- a/src/common/components/ArticleDetails.scss
+++ b/src/common/components/ArticleDetails.scss
@@ -66,6 +66,7 @@
 	color: darkgray;
 	font-size: 11px;
 	margin-bottom: 2px;
+	white-space: nowrap;
 }
 .article-details > .content > .columns > .left > .speech-bubble-container {
 	display: flex;
